# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
inc/: Board.hpp  Entity.hpp  RLE_module.hpp  Renderer.hpp  World.hpp
src/: Board.cpp  Entity.cpp  RLE_module.cpp  Renderer.cpp  World.cpp  main.cpp
uts/: BoardTest.hpp  CMakeLists.txt  RLETest.hpp  WorldTest.hpp  tests.cpp
